--- a/web_app/app/templates/index.html
+++ b/web_app/app/templates/index.html
@@ -248,7 +248,7 @@
                     </div>
                     
                     <!-- History Section -->
-                    <div class="card card-dhp">
+                    <div class="card card-dhp mb-3">
                         <div class="card-header">
                             <h6 class="mb-0"><i class="fas fa-history me-2"></i>History</h6>
                         </div>
@@ -264,7 +264,7 @@
                     </div>
                     
                     <!-- Definitions Section -->
-                    <div class="card card-dhp">
+                    <div class="card card-dhp mb-3">
                         <div class="card-header">
                             <h6 class="mb-0"><i class="fas fa-book me-2"></i>Definitions</h6>
                         </div>
