--- a/web_app/app/templates/components/header.html
+++ b/web_app/app/templates/components/header.html
@@ -9,7 +9,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navMain">
-            <div class="navbar-nav ms-auto align-items-center">
+            <div class="navbar-nav ms-auto">
                 <span class="navbar-text me-2" id="user-info">
                     <img id="user-avatar" class="avatar-circle d-none me-2" alt="avatar" />
                     <i class="fas fa-user me-1" id="user-icon"></i>
